--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,5 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-tick-tack-go-server
+# binary output on *NIX machines
 tic-tac-go-server
