--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.projectName=tic-tac-go-server
 # This property is optional if sonar.modules is set.
 sonar.sources=.
 
-sonar.coverage.exclusions=*_test.go
+sonar.coverage.exclusions=./*_test.go
 
 sonar.go.coverage.reportPaths=coverage.out
 
